--- a/config/sites/default/core.entity_view_display.node.location.image_box_reference.yml
+++ b/config/sites/default/core.entity_view_display.node.location.image_box_reference.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.image_box_reference
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
+    - field.field.node.location.field_location_body_components
     - field.field.node.location.field_location_card_cta
     - field.field.node.location.field_location_card_desc
     - field.field.node.location.field_location_card_image
@@ -56,6 +57,7 @@ hidden:
   content_moderation_control: true
   field_location_address: true
   field_location_body: true
+  field_location_body_components: true
   field_location_components: true
   field_location_fax: true
   field_location_geo: true
