--- a/config/sites/default/core.entity_view_display.node.location.search_index.yml
+++ b/config/sites/default/core.entity_view_display.node.location.search_index.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.search_index
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
+    - field.field.node.location.field_location_body_components
     - field.field.node.location.field_location_card_cta
     - field.field.node.location.field_location_card_desc
     - field.field.node.location.field_location_card_image
@@ -116,6 +117,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_location_body_components: true
   field_location_card_cta: true
   field_location_card_desc: true
   field_location_card_image: true
