--- a/config/sites/default/core.entity_view_display.node.location.sidebar_first.yml
+++ b/config/sites/default/core.entity_view_display.node.location.sidebar_first.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.sidebar_first
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
+    - field.field.node.location.field_location_body_components
     - field.field.node.location.field_location_card_cta
     - field.field.node.location.field_location_card_desc
     - field.field.node.location.field_location_card_image
@@ -59,6 +60,7 @@ hidden:
   content_moderation_control: true
   field_location_address: true
   field_location_body: true
+  field_location_body_components: true
   field_location_card_cta: true
   field_location_card_desc: true
   field_location_card_image: true
