--- a/config/sites/default/core.entity_view_display.node.location.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.location.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
+    - field.field.node.location.field_location_body_components
     - field.field.node.location.field_location_card_cta
     - field.field.node.location.field_location_card_desc
     - field.field.node.location.field_location_card_image
@@ -69,6 +70,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_location_body: true
+  field_location_body_components: true
   field_location_card_cta: true
   field_location_card_desc: true
   field_location_card_image: true
