facet for filters

--- a/config/sites/default/search_api.index.acquia_search_index.yml
+++ b/config/sites/default/search_api.index.acquia_search_index.yml
@@ -3,24 +3,25 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_location_geo
     - field.storage.node.field_services_ref
     - field.storage.node.field_medical_specialties_ref
     - field.storage.taxonomy_term.field_related_conditions_ref
     - field.storage.taxonomy_term.field_condition_synonym
-    - field.storage.node.field_location_type
     - field.storage.node.field_profile_gender
     - field.storage.node.field_insurance_ref
     - field.storage.taxonomy_term.field_insurance_company
-    - field.storage.node.field_location_ref
     - field.storage.node.field_profile_languages
+    - field.storage.node.field_location_geo
+    - field.storage.node.field_location_type
+    - field.storage.node.field_location_ref
     - field.storage.node.field_profile_type
-    - search_api.server.local_development
+    - field.storage.node.field_article_type_ref
+    - search_api.server.acquia_search_server
     - core.entity_view_mode.node.search_index
   module:
-    - search_api_location
     - node
     - taxonomy
+    - search_api_location
     - search_api_solr
     - search_api
     - towerhealth_misc
@@ -31,6 +32,17 @@ name: 'Acquia Search Solr Index'
 description: ''
 read_only: true
 field_settings:
+  article_type_string:
+    label: 'Article Type » Taxonomy term » Name » String'
+    datasource_id: 'entity:node'
+    property_path: 'field_article_type_ref:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_article_type_ref
+      module:
+        - taxonomy
+        - taxonomy
   location_latlon:
     label: 'Location Geo » LatLong Pair'
     datasource_id: 'entity:node'
@@ -296,6 +308,7 @@ processor_settings:
   ignorecase:
     all_fields: true
     fields:
+      - article_type_string
       - location_latlon
       - location_services_specialty_condition_name
       - location_services_specialty_condition_synonym
@@ -322,6 +335,7 @@ processor_settings:
     weights:
       preprocess_index: -20
       preprocess_query: -20
+  language_with_fallback: {  }
   provider_sort_field: {  }
   rendered_item: {  }
   reverse_entity_references: {  }
