--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -27,7 +27,6 @@ dependencies:
     - geofield
     - media_library
     - metatag
-    - office_hours
     - paragraphs
     - path
     - readonly_field_widget
@@ -254,9 +253,13 @@ content:
     region: content
   field_location_hours:
     weight: 18
-    settings: {  }
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: office_hours_default
+    type: readonly_field_widget
     region: content
   field_location_id:
     weight: 13
