--- a/config/sites/default/views.view.article_listing.yml
+++ b/config/sites/default/views.view.article_listing.yml
@@ -1,18 +1,23 @@
-uuid: 80c35ecb-0372-442c-bbdb-70ac8a24ff04
+uuid: 900a6a6b-0310-4e46-b24e-15dcc654b548
 langcode: en
 status: true
 dependencies:
   config:
-    - search_api.index.acquia_search_index
+    - core.entity_view_mode.node.teaser
+    - node.type.article
+    - taxonomy.vocabulary.article_types
   module:
-    - search_api
+    - better_exposed_filters
+    - node
+    - taxonomy
+    - user
 id: article_listing
 label: 'Article Listing'
 module: views
 description: ''
 tag: ''
-base_table: search_api_index_acquia_search_index
-base_field: search_api_id
+base_table: node_field_data
+base_field: nid
 display:
   default:
     display_plugin: default
@@ -21,27 +26,48 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: perm
+        options:
+          perm: 'access content'
       cache:
         type: tag
         options: {  }
       query:
         type: views_query
         options:
-          bypass_access: false
-          skip_access: false
-          preserve_facet_query_args: false
+          disable_sql_rewrite: false
+          distinct: false
+          replica: false
+          query_comment: ''
+          query_tags: {  }
       exposed_form:
-        type: basic
+        type: bef
         options:
-          submit_button: 'Search News'
+          submit_button: Filter
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
+          input_required: false
+          text_input_required: 'Select any filter and click on Apply to see results'
+          bef:
+            general:
+              allow_secondary: false
+              secondary_label: 'Advanced options'
+              autosubmit: false
+              autosubmit_exclude_textfield: false
+              autosubmit_hide: false
+            field_article_type_ref_target_id:
+              bef_format: bef
+              more_options:
+                bef_select_all_none: false
+                bef_collapsible: false
+                is_secondary: false
+                rewrite:
+                  filter_rewrite_values: ''
+          text_input_required_format: basic_html
       pager:
         type: mini
         options:
@@ -63,47 +89,35 @@ display:
       style:
         type: default
       row:
-        type: search_api
+        type: 'entity:node'
+        options:
+          view_mode: teaser
       fields:
-        article_type_string:
-          table: search_api_index_acquia_search_index
-          field: article_type_string
-          id: article_type_string
-          entity_type: null
-          entity_field: null
-          plugin_id: search_api_field
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          entity_type: node
+          entity_field: title
+          label: ''
+          alter:
+            alter_text: false
+            make_link: false
+            absolute: false
+            trim: false
+            word_boundary: false
+            ellipsis: false
+            strip_tags: false
+            html: false
+          hide_empty: false
+          empty_zero: false
+          settings:
+            link_to_entity: true
+          plugin_id: field
           relationship: none
           group_type: group
           admin_label: ''
-          label: ''
           exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
           element_type: ''
           element_class: ''
           element_label_type: ''
@@ -113,12 +127,9 @@ display:
           element_wrapper_class: ''
           element_default_classes: true
           empty: ''
-          hide_empty: false
-          empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
           type: string
-          settings: {  }
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -129,40 +140,62 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          field_rendering: true
-          fallback_handler: search_api
-          fallback_options:
-            link_to_item: false
-            use_highlighting: false
-            multi_type: separator
-            multi_separator: ', '
       filters:
+        status:
+          value: '1'
+          table: node_field_data
+          field: status
+          plugin_id: boolean
+          entity_type: node
+          entity_field: status
+          id: status
+          expose:
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+          group: 1
         type:
           id: type
-          table: search_api_index_acquia_search_index
+          table: node_field_data
           field: type
+          value:
+            article: article
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
+          expose:
+            operator_limit_selection: false
+            operator_list: {  }
+        field_article_type_ref_target_id:
+          id: field_article_type_ref_target_id
+          table: node__field_article_type_ref
+          field: field_article_type_ref_target_id
           relationship: none
           group_type: group
           admin_label: ''
           operator: or
-          value:
-            article: article
+          value: {  }
           group: 1
-          exposed: false
+          exposed: true
           expose:
-            operator_id: ''
+            operator_id: field_article_type_ref_target_id_op
             label: ''
             description: ''
             use_operator: false
-            operator: ''
+            operator: field_article_type_ref_target_id_op
             operator_limit_selection: false
             operator_list: {  }
-            identifier: ''
+            identifier: field_article_type_ref_target_id
             required: false
             remember: false
-            multiple: false
+            multiple: true
             remember_roles:
               authenticated: authenticated
+              anonymous: '0'
+              article_editor: '0'
+              editor: '0'
+              publisher: '0'
+              administrator: '0'
             reduce: false
           is_grouped: false
           group_info:
@@ -177,57 +210,28 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           reduce_duplicates: false
-          plugin_id: search_api_options
-        article_type_string:
-          id: article_type_string
-          table: search_api_index_acquia_search_index
-          field: article_type_string
+          type: select
+          limit: true
+          vid: article_types
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
+      sorts:
+        created:
+          id: created
+          table: node_field_data
+          field: created
+          order: DESC
+          entity_type: node
+          entity_field: created
+          plugin_id: date
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '='
-          value:
-            min: ''
-            max: ''
-            value: ''
-          group: 1
-          exposed: true
+          exposed: false
           expose:
-            operator_id: article_type_string_op
             label: ''
-            description: ''
-            use_operator: false
-            operator: article_type_string_op
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: article_type_string
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              article_editor: '0'
-              editor: '0'
-              publisher: '0'
-              administrator: '0'
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: search_api_string
-      sorts: {  }
+          granularity: second
       title: News
       header:
         result:
@@ -238,13 +242,14 @@ display:
           group_type: group
           admin_label: ''
           empty: false
-          content: 'Showing @start - @end of @total results.'
+          content: 'Showing @start - @end of @total results'
           plugin_id: result
       footer: {  }
       empty: {  }
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      use_ajax: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -252,19 +257,19 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
+        - 'user.node_grants:view'
+        - user.permissions
       tags: {  }
-  article_listing:
+  article_listing_page:
     display_plugin: page
-    id: article_listing
+    id: article_listing_page
     display_title: Page
     position: 1
     display_options:
       display_extenders: {  }
       path: news
-      cache:
-        type: none
-      defaults:
-        cache: false
+      exposed_block: true
     cache_metadata:
       max-age: -1
       contexts:
@@ -272,4 +277,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - user
+        - 'user.node_grants:view'
+        - user.permissions
       tags: {  }
