--- a/config/sites/default/core.entity_form_display.node.page.default.yml
+++ b/config/sites/default/core.entity_form_display.node.page.default.yml
@@ -113,7 +113,7 @@ content:
     settings:
       title: Components
       title_plural: Components
-      edit_mode: open
+      edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: _none
@@ -144,7 +144,7 @@ content:
     settings:
       title: Sidebar
       title_plural: Sidebars
-      edit_mode: open
+      edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: _none
