--- a/config/sites/default/field.field.node.page.field_basic_components.yml
+++ b/config/sites/default/field.field.node.page.field_basic_components.yml
@@ -5,14 +5,11 @@ dependencies:
   config:
     - field.storage.node.field_basic_components
     - node.type.page
-    - paragraphs.paragraphs_type.basic_header
-    - paragraphs.paragraphs_type.education
-    - paragraphs.paragraphs_type.homepage_hero
-    - paragraphs.paragraphs_type.icon_button
-    - paragraphs.paragraphs_type.on_my_way
-    - paragraphs.paragraphs_type.patient_story
-    - paragraphs.paragraphs_type.rating_comments
-    - paragraphs.paragraphs_type.recognition_card
+    - paragraphs.paragraphs_type.cards
+    - paragraphs.paragraphs_type.cta_banner
+    - paragraphs.paragraphs_type.cta_list_banner
+    - paragraphs.paragraphs_type.file_download_cta
+    - paragraphs.paragraphs_type.rich_text
   module:
     - entity_reference_revisions
 id: node.page.field_basic_components
@@ -28,53 +25,50 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
-    negate: 1
+    negate: 0
     target_bundles:
-      education: education
-      rating_comments: rating_comments
-      basic_header: basic_header
-      homepage_hero: homepage_hero
-      on_my_way: on_my_way
-      patient_story: patient_story
-      recognition_card: recognition_card
-      icon_button: icon_button
+      cards: cards
+      cta_banner: cta_banner
+      cta_list_banner: cta_list_banner
+      file_download_cta: file_download_cta
+      rich_text: rich_text
     target_bundles_drag_drop:
       education:
-        enabled: true
         weight: 3
+        enabled: false
       rating_comments:
-        enabled: true
         weight: 4
+        enabled: false
       basic_header:
-        enabled: true
         weight: 11
+        enabled: false
       card:
         weight: 12
         enabled: false
       cards:
+        enabled: true
         weight: 13
-        enabled: false
       homepage_hero:
-        enabled: true
         weight: 15
+        enabled: false
       on_my_way:
-        enabled: true
         weight: 16
+        enabled: false
       patient_story:
-        enabled: true
         weight: 17
+        enabled: false
       recognition_card:
-        enabled: true
         weight: 19
+        enabled: false
       article_card:
         weight: 19
         enabled: false
       cta_banner:
+        enabled: true
         weight: 19
-        enabled: false
       cta_list_banner:
+        enabled: true
         weight: 20
-        enabled: false
       recognition_cards:
         weight: 20
         enabled: false
@@ -82,15 +76,18 @@ settings:
         weight: 22
         enabled: false
       icon_button:
-        enabled: true
         weight: 24
+        enabled: false
       file_download_cta:
+        enabled: true
         weight: 26
-        enabled: false
       rich_text:
+        enabled: true
         weight: 30
-        enabled: false
       sidebar_card:
         weight: 36
+        enabled: false
+      video_card:
+        weight: 38
         enabled: false
 field_type: entity_reference_revisions
