wip second and fourth level menus

--- a/config/sites/default/block.block.main_menu_sidebar_level_2.yml
+++ b/config/sites/default/block.block.main_menu_sidebar_level_2.yml
@@ -1,4 +1,4 @@
-uuid: c8c9ed67-bee1-484d-8fca-9ff15057e886
+uuid: a0eae200-6f07-48e9-815a-6c2284d0f73c
 langcode: en
 status: true
 dependencies:
@@ -7,9 +7,10 @@ dependencies:
   module:
     - ctools
     - menu_block
+    - system
   theme:
     - tower_health
-id: main_menu_sidebar_level_3
+id: main_menu_sidebar_level_2
 theme: tower_health
 region: sidebar_first
 weight: 0
@@ -17,10 +18,10 @@ provider: null
 plugin: 'menu_block:main-menu-sidebar'
 settings:
   id: 'menu_block:main-menu-sidebar'
-  label: 'Main menu sidebar - Level 3'
+  label: 'Main menu sidebar - Level 2'
   provider: menu_block
   label_display: '0'
-  level: 3
+  level: 1
   depth: 3
   expand: 0
   parent: 'main-menu-sidebar:'
@@ -29,8 +30,12 @@ visibility:
   'entity_bundle:node':
     id: 'entity_bundle:node'
     bundles:
-      location: location
-      service: service
+      profile: profile
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
+  request_path:
+    id: request_path
+    pages: "/academics\r\n/academics*"
+    negate: false
+    context_mapping: {  }
