--- a/config/sites/default/block.block.main_menu_sidebar_level_4.yml
+++ b/config/sites/default/block.block.main_menu_sidebar_level_4.yml
@@ -1,15 +1,15 @@
-uuid: c8c9ed67-bee1-484d-8fca-9ff15057e886
+uuid: ba063172-7e01-4c32-b37c-6b271b8d2bbc
 langcode: en
 status: true
 dependencies:
   config:
     - system.menu.main-menu-sidebar
   module:
-    - ctools
     - menu_block
+    - system
   theme:
     - tower_health
-id: main_menu_sidebar_level_3
+id: main_menu_sidebar_level_4
 theme: tower_health
 region: sidebar_first
 weight: 0
@@ -17,20 +17,17 @@ provider: null
 plugin: 'menu_block:main-menu-sidebar'
 settings:
   id: 'menu_block:main-menu-sidebar'
-  label: 'Main menu sidebar - Level 3'
+  label: 'Main menu sidebar - Level 4'
   provider: menu_block
   label_display: '0'
-  level: 3
+  level: 4
   depth: 3
   expand: 0
   parent: 'main-menu-sidebar:'
   suggestion: main_menu_sidebar
 visibility:
-  'entity_bundle:node':
-    id: 'entity_bundle:node'
-    bundles:
-      location: location
-      service: service
+  request_path:
+    id: request_path
+    pages: '/academics/academic-departments/*'
     negate: false
-    context_mapping:
-      node: '@node.node_route_context:node'
+    context_mapping: {  }
