--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.yml
@@ -53,22 +53,22 @@ cta_list:
   links:
     - text: "MyTowerHealth"
       url: "/"
-      icon: "th-my-tower.svg"
+      button_icon: "th-my-tower.svg"
     - text: "Conditions & Services"
       url: "/"
-      icon: "th-services.svg"
+      button_icon: "th-services.svg"
     - text: "Find a Hospital or Location"
       url: "/"
-      icon: "th-find-hospital.svg"
+      button_icon: "th-find-hospital.svg"
     - text: "Request an Appointment"
       url: "/"
-      icon: "th-cal.svg"  
+      button_icon: "th-cal.svg"
     - text: "Bill Pay & Insurance"
       url: "/"
-      icon: "th-bill.svg"
+      button_icon: "th-bill.svg"
     - text: "Urgent Care & Emergency Locations"
       url: "/"
-      icon: "th-emergency-time.svg"
+      button_icon: "th-emergency-time.svg"
     
 
 cta_banner:
