--- a/config/sites/default/core.entity_view_display.node.page.components.yml
+++ b/config/sites/default/core.entity_view_display.node.page.components.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.page.field_basic_enable_nav
     - field.field.node.page.field_basic_header
     - field.field.node.page.field_basic_sidebar
+    - field.field.node.page.field_body_components
     - field.field.node.page.field_metatags
     - field.field.node.page.field_reference_access_control
     - field.field.node.page.field_text
@@ -36,6 +37,7 @@ hidden:
   field_basic_enable_nav: true
   field_basic_header: true
   field_basic_sidebar: true
+  field_body_components: true
   field_metatags: true
   field_reference_access_control: true
   field_text: true
