--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
+    - field.field.node.location.field_location_body_components
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
@@ -44,13 +45,13 @@ content:
     type: address_default
     region: content
   field_location_body:
-    weight: 5
+    weight: 4
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_location_components:
+  field_location_body_components:
     type: entity_reference_revisions_entity_view
     weight: 10
     label: hidden
@@ -59,8 +60,17 @@ content:
       link: ''
     third_party_settings: {  }
     region: content
+  field_location_components:
+    type: entity_reference_revisions_entity_view
+    weight: 9
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_location_fax:
-    weight: 7
+    weight: 6
     label: inline
     settings:
       title: ''
@@ -77,7 +87,7 @@ content:
     third_party_settings: {  }
     region: content
   field_location_hours:
-    weight: 8
+    weight: 7
     label: hidden
     settings:
       show_closed: all
@@ -120,7 +130,7 @@ content:
     type: text_default
     region: content
   field_location_phone_number:
-    weight: 6
+    weight: 5
     label: inline
     settings:
       title: ''
@@ -135,7 +145,7 @@ content:
     type: metatag_empty_formatter
     region: content
   field_services_ref:
-    weight: 9
+    weight: 8
     label: above
     settings:
       link: true
