--- a/config/sites/default/core.entity_view_display.node.location.search_index.yml
+++ b/config/sites/default/core.entity_view_display.node.location.search_index.yml
@@ -6,15 +6,18 @@ dependencies:
     - core.entity_view_mode.node.search_index
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
+    - field.field.node.location.field_location_body_components
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
+    - field.field.node.location.field_location_geo
     - field.field.node.location.field_location_hours
     - field.field.node.location.field_location_id
     - field.field.node.location.field_location_image
     - field.field.node.location.field_location_insurance
     - field.field.node.location.field_location_phone_number
     - field.field.node.location.field_location_type
+    - field.field.node.location.field_metatags
     - field.field.node.location.field_services_ref
     - node.type.location
   module:
@@ -129,6 +132,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_location_body_components: true
   field_location_geo: true
   field_location_id: true
   field_location_image: true
