--- a/config/sites/default/core.entity_view_display.node.page.default.yml
+++ b/config/sites/default/core.entity_view_display.node.page.default.yml
@@ -7,11 +7,13 @@ dependencies:
     - field.field.node.page.field_basic_enable_nav
     - field.field.node.page.field_basic_header
     - field.field.node.page.field_basic_sidebar
+    - field.field.node.page.field_body_components
     - field.field.node.page.field_metatags
     - field.field.node.page.field_reference_access_control
     - field.field.node.page.field_text
     - node.type.page
   module:
+    - entity_reference_revisions
     - metatag
     - text
     - user
@@ -23,12 +25,21 @@ bundle: page
 mode: default
 content:
   content_moderation_control:
-    weight: 1
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_body_components:
+    type: entity_reference_revisions_entity_view
+    weight: 1
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_metatags:
-    weight: 3
+    weight: 4
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -42,7 +53,7 @@ content:
     type: text_default
     region: content
   links:
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
