--- a/config/sites/default/core.entity_view_display.node.service.sidebar_first.yml
+++ b/config/sites/default/core.entity_view_display.node.service.sidebar_first.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.service.field_body
     - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_metatags
+    - field.field.node.service.field_service_body_components
     - field.field.node.service.field_service_core_bool
     - field.field.node.service.field_service_core_ref
     - field.field.node.service.field_service_flex
@@ -34,6 +35,7 @@ hidden:
   content_moderation_control: true
   field_body: true
   field_metatags: true
+  field_service_body_components: true
   field_service_core_bool: true
   field_service_core_ref: true
   field_service_flex: true
