--- a/config/sites/default/field.field.node.service.field_service_flex.yml
+++ b/config/sites/default/field.field.node.service.field_service_flex.yml
@@ -7,6 +7,7 @@ dependencies:
     - node.type.service
     - paragraphs.paragraphs_type.anchored_cta_block
     - paragraphs.paragraphs_type.cards
+    - paragraphs.paragraphs_type.care_circle
     - paragraphs.paragraphs_type.patient_story
     - paragraphs.paragraphs_type.recognition_cards
   module:
@@ -30,6 +31,7 @@ settings:
       patient_story: patient_story
       recognition_cards: recognition_cards
       anchored_cta_block: anchored_cta_block
+      care_circle: care_circle
     target_bundles_drag_drop:
       card:
         weight: -13
@@ -76,13 +78,25 @@ settings:
       homepage_hero:
         weight: 28
         enabled: false
+      care_circle:
+        enabled: true
+        weight: 28
       icon_button:
         weight: 29
+        enabled: false
+      care_circle_section:
+        weight: 29
+        enabled: false
+      file_download_cta:
+        weight: 33
         enabled: false
       rich_text:
         weight: 35
         enabled: false
       sidebar_card:
         weight: 36
+        enabled: false
+      video_card:
+        weight: 44
         enabled: false
 field_type: entity_reference_revisions
