--- a/config/sites/default/field.field.paragraph.care_circle.field_circle_section_ref.yml
+++ b/config/sites/default/field.field.paragraph.care_circle.field_circle_section_ref.yml
@@ -1,20 +1,19 @@
-uuid: 9d45cbcd-10a9-457b-b957-dc8e1cff68fa
+uuid: ecff6d6e-5787-489a-8240-d16c698b2655
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_location_components
-    - node.type.location
+    - field.storage.paragraph.field_circle_section_ref
     - paragraphs.paragraphs_type.care_circle
-    - paragraphs.paragraphs_type.on_my_way
+    - paragraphs.paragraphs_type.care_circle_section
   module:
     - entity_reference_revisions
-id: node.location.field_location_components
-field_name: field_location_components
-entity_type: node
-bundle: location
-label: Components
-description: 'Is this location a hospital or center? Add additional components to the page to let the user know more about this location. The available components are: TBD'
+id: paragraph.care_circle.field_circle_section_ref
+field_name: field_circle_section_ref
+entity_type: paragraph
+bundle: care_circle
+label: 'Circle Sections'
+description: 'Add between 3 and 8 sections for this care circle'
 required: false
 translatable: false
 default_value: {  }
@@ -24,18 +23,8 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
-      on_my_way: on_my_way
-      care_circle: care_circle
+      care_circle_section: care_circle_section
     target_bundles_drag_drop:
-      education:
-        weight: 2
-        enabled: false
-      on_my_way:
-        enabled: true
-        weight: 5
-      rating_comments:
-        weight: 6
-        enabled: false
       anchored_cta_block:
         weight: 23
         enabled: false
@@ -52,16 +41,19 @@ settings:
         weight: 27
         enabled: false
       care_circle:
-        enabled: true
         weight: 28
-      care_circle_section:
-        weight: 29
         enabled: false
+      care_circle_section:
+        enabled: true
+        weight: 29
       cta_banner:
         weight: 30
         enabled: false
       cta_list_banner:
         weight: 31
+        enabled: false
+      education:
+        weight: 32
         enabled: false
       file_download_cta:
         weight: 33
@@ -75,8 +67,14 @@ settings:
       icon_button:
         weight: 36
         enabled: false
+      on_my_way:
+        weight: 37
+        enabled: false
       patient_story:
         weight: 38
+        enabled: false
+      rating_comments:
+        weight: 39
         enabled: false
       recognition_card:
         weight: 40
