--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -62,7 +62,7 @@ third_party_settings:
         description: ''
         formatter: closed
         required_fields: true
-      label: 'Description'
+      label: Description
       region: content
     group_core_service:
       children:
@@ -91,7 +91,7 @@ third_party_settings:
         required_fields: true
         id: ''
         classes: ''
-      label: 'Conditions'
+      label: Conditions
       region: content
     group_flexible_components:
       children:
@@ -134,8 +134,7 @@ third_party_settings:
         description: ''
         formatter: closed
         required_fields: true
-      label: 'Header'
-      region: content
+      label: Header
     group_card_data:
       children:
         - field_service_card_image
