--- a/config/sites/default/core.entity_view_display.node.service.image_box_reference.yml
+++ b/config/sites/default/core.entity_view_display.node.service.image_box_reference.yml
@@ -59,6 +59,7 @@ hidden:
   field_service_core_bool: true
   field_service_core_ref: true
   field_service_flex: true
+  field_service_header: true
   field_service_headline: true
   field_service_intro: true
   field_service_related_ref: true
