--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -22,6 +22,9 @@ dependencies:
     - node.type.location
   module:
     - entity_reference_revisions
+    - metatag
+    - office_hours
+    - telephone
     - text
     - user
 id: node.location.default
@@ -30,16 +33,7 @@ bundle: location
 mode: default
 content:
   field_location_body:
-    type: text_default
-    weight: 0
-    region: content
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: address_default
-    region: content
-  field_location_body:
-    weight: 4
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -47,16 +41,7 @@ content:
     region: content
   field_location_body_components:
     type: entity_reference_revisions_entity_view
-    weight: 1
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
-  field_location_components:
-    type: entity_reference_revisions_entity_view
-    weight: 9
+    weight: 0
     label: hidden
     settings:
       view_mode: default
@@ -64,7 +49,7 @@ content:
     third_party_settings: {  }
     region: content
   field_location_fax:
-    weight: 6
+    weight: 5
     label: inline
     settings:
       title: ''
@@ -72,7 +57,7 @@ content:
     type: telephone_link
     region: content
   field_location_hours:
-    weight: 7
+    weight: 6
     label: hidden
     settings:
       show_closed: all
@@ -100,7 +85,7 @@ content:
     region: content
   field_location_image:
     type: entity_reference_entity_view
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       view_mode: default
@@ -115,7 +100,7 @@ content:
     type: text_default
     region: content
   field_location_phone_number:
-    weight: 5
+    weight: 4
     label: inline
     settings:
       title: ''
@@ -123,15 +108,12 @@ content:
     type: telephone_link
     region: content
   field_metatags:
-    weight: 13
+    weight: 7
     label: above
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
-  field_services_ref:
-    weight: 8
-    label: above
   field_services_ref:
     type: entity_reference_label
     weight: 2
@@ -147,13 +129,8 @@ hidden:
   field_location_card_desc: true
   field_location_card_image: true
   field_location_components: true
-  field_location_fax: true
   field_location_geo: true
-  field_location_hours: true
   field_location_id: true
-  field_location_image: true
-  field_location_phone_number: true
   field_location_type: true
-  field_metatags: true
   links: true
   search_api_excerpt: true
