--- a/config/sites/default/core.entity_view_display.node.service.image_box_reference.yml
+++ b/config/sites/default/core.entity_view_display.node.service.image_box_reference.yml
@@ -56,9 +56,11 @@ hidden:
   field_location_ref: true
   field_medical_specialties_ref: true
   field_metatags: true
+  field_service_body_components: true
   field_service_core_bool: true
   field_service_core_ref: true
   field_service_flex: true
+  field_service_header: true
   field_service_headline: true
   field_service_intro: true
   field_service_related_ref: true
