--- a/config/sites/default/core.entity_view_display.paragraph.care_circle.default.yml
+++ b/config/sites/default/core.entity_view_display.paragraph.care_circle.default.yml
@@ -20,14 +20,14 @@ mode: default
 content:
   field_care_circle_description:
     weight: 4
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_care_circle_text_title:
     weight: 3
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -35,7 +35,7 @@ content:
     region: content
   field_care_circle_title:
     weight: 0
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -43,7 +43,7 @@ content:
     region: content
   field_care_circle_title_link:
     weight: 1
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
@@ -56,7 +56,7 @@ content:
   field_circle_section_ref:
     type: entity_reference_revisions_entity_view
     weight: 2
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
