--- a/config/sites/default/core.entity_view_display.paragraph.care_circle_section.default.yml
+++ b/config/sites/default/core.entity_view_display.paragraph.care_circle_section.default.yml
@@ -21,7 +21,7 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    type: list_default
+    type: list_key
     region: content
   field_care_circle_section_icon:
     type: entity_reference_entity_view
