--- a/config/sites/default/views.view.find_a_provider.yml
+++ b/config/sites/default/views.view.find_a_provider.yml
@@ -434,7 +434,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: find-a-provider
+      path: providers
       exposed_block: true
       cache:
         type: none
