--- a/config/sites/default/views.view.find_a_service.yml
+++ b/config/sites/default/views.view.find_a_service.yml
@@ -304,7 +304,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: find-a-service
+      path: services
       exposed_block: true
       cache:
         type: none
