--- a/config/sites/default/block.block.locationproximityfilter.yml
+++ b/config/sites/default/block.block.locationproximityfilter.yml
@@ -21,6 +21,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/find-a-location\r\n/find-a-location*"
+    pages: "/locations\r\n/locations*"
     negate: false
     context_mapping: {  }
