--- a/config/sites/default/block.block.main_menu_sidebar_level_3.yml
+++ b/config/sites/default/block.block.main_menu_sidebar_level_3.yml
@@ -7,6 +7,7 @@ dependencies:
   module:
     - ctools
     - menu_block
+    - system
   theme:
     - tower_health
 id: main_menu_sidebar_level_3
@@ -30,7 +31,13 @@ visibility:
     id: 'entity_bundle:node'
     bundles:
       location: location
+      page: page
       service: service
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
+  request_path:
+    id: request_path
+    pages: "/services*\r\n/locations*"
+    negate: false
+    context_mapping: {  }
