--- a/config/sites/default/block.block.providertype.yml
+++ b/config/sites/default/block.block.providertype.yml
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/find-a-provider\r\n/find-a-provider*"
+    pages: "/providers\r\n/providers*"
     negate: false
     context_mapping: {  }
