--- a/config/sites/default/block.block.services.yml
+++ b/config/sites/default/block.block.services.yml
@@ -24,6 +24,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/find-a-location\r\n/find-a-location*"
+    pages: "/locations\r\n/locations*"
     negate: false
     context_mapping: {  }
