Add big menu module.

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "drupal/admin_toolbar": "^2.0",
         "drupal/auto_entitylabel": "^3.0@beta",
         "drupal/better_exposed_filters": "^3.0",
+        "drupal/bigmenu": "^1.0@alpha",
         "drupal/components": "^1.1",
         "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
