--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -5,6 +5,7 @@ module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
   auto_entitylabel: 0
+  bigmenu: 0
   block: 0
   block_content: 0
   breakpoint: 0
