add class for shaded header

--- a/config/sites/default/core.entity_view_display.paragraph.basic_header.default.yml
+++ b/config/sites/default/core.entity_view_display.paragraph.basic_header.default.yml
@@ -46,7 +46,7 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    type: list_default
+    type: list_key
     region: content
 hidden:
   search_api_excerpt: true
