--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -198,6 +198,7 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     region: content
+    third_party_settings: {  }
   field_service_card_cta:
     weight: 129
     settings:
