--- a/config/sites/default/views.view.auto_provider.yml
+++ b/config/sites/default/views.view.auto_provider.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - search_api.index.towerhealth
+    - search_api.index.acquia_search_index
   module:
     - search_api
 id: auto_provider
@@ -219,19 +219,7 @@ display:
           fields:
             - title
           plugin_id: search_api_fulltext
-      sorts:
-        search_api_relevance:
-          id: search_api_relevance
-          table: search_api_index_towerhealth
-          field: search_api_relevance
-          relationship: none
-          group_type: group
-          admin_label: ''
-          order: ASC
-          exposed: false
-          expose:
-            label: ''
-          plugin_id: search_api
+      sorts: {  }
       header: {  }
       footer: {  }
       empty: {  }
