--- a/config/sites/default/views.view.auto_services.yml
+++ b/config/sites/default/views.view.auto_services.yml
@@ -227,6 +227,18 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
+        title:
+          id: title
+          table: search_api_index_acquia_search_index
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
           order: ASC
           exposed: false
           expose:
