--- a/config/sites/default/views.view.auto_synonym.yml
+++ b/config/sites/default/views.view.auto_synonym.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.taxonomy_term.field_condition_synonym
-    - search_api.index.towerhealth
+    - search_api.index.acquia_search_index
   module:
     - search_api
 id: auto_synonym
@@ -228,6 +228,18 @@ display:
           id: search_api_relevance
           table: search_api_index_towerhealth
           field: search_api_relevance
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
+        synonym:
+          id: synonym
+          table: search_api_index_acquia_search_index
+          field: synonym
           relationship: none
           group_type: group
           admin_label: ''
